--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 
 
 #app-header {
-  background-color: #008B8B;
+  background-color: royalblue;
   height: 125px;
   padding: 20px;
   color: white;
