--- a/src/components/Portfolio/PortfolioList.css
+++ b/src/components/Portfolio/PortfolioList.css
@@ -1,23 +1,34 @@
 #project-card {
-    max-width: 400px;
-    height: 450px;
-    margin: 10px;
+    width: 325px;
+    height: 475px;
+    padding: 10px;
+    margin: 5px;
 }
 
-.card-media {
-    height: 200px;
+#card-media {
+    height: 150px;
 }
 
 #project-name {
     text-align: left;
+    padding: 3px;
 }
 
 #project-description {
     text-align: justify;
     text-justify: auto;
+    padding: 3px;
+
+    
 }
 
 #project-tag {
     text-align: justify;
     text-justify: auto;
+    padding: 3px;
+
 }
+
+/* #github-btn {
+    align-content: flex-end;
+} */
