improved card spacing and added more dummy project data to the database

--- a/src/components/Portfolio/PortfolioList.css
+++ b/src/components/Portfolio/PortfolioList.css
@@ -1,8 +1,9 @@
 #project-card {
-    width: 325px;
-    height: 475px;
+    max-width: 375px;
+    max-height: 475px;
     padding: 10px;
     margin: 5px;
+    justify-content: space-between;
 }
 
 #card-media {
