--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -13,12 +13,6 @@
     padding: 20px;
 }
 
-/* #input-form {
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-top: 30px;
-} */
-
 #text-paper {
     margin-left: 100px;
     margin-right: 100px;
@@ -32,4 +26,9 @@
     height: 50px;
     padding: 20px;
     margin: 20px;
+}
+
+#form-title {
+    padding: 10px;
+    margin: 10px;
 }
