added icons and changed project tags to material-ui chips

--- a/src/components/Portfolio/PortfolioList.css
+++ b/src/components/Portfolio/PortfolioList.css
@@ -23,10 +23,9 @@
     
 }
 
-#project-tag {
-    text-align: justify;
-    text-justify: auto;
-    padding: 3px;
+#tag-chip {
+    float: left;
+    padding: 2px;
 
 }
 
