--- a/src/components/Portfolio/Drawer.css
+++ b/src/components/Portfolio/Drawer.css
@@ -2,3 +2,31 @@
     padding: 20px;
     margin: 10px;
 }
+
+#about-header {
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 10px;
+    width: 150px;
+}
+
+#about-body {
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    width: 250px;
+}
+
+#profile-picture {
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+#linkedin-btn {
+    padding: 20px;
+    margin: 40px;
+    
+}
